<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_signup_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/padding_activity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tl_signup_senha">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding_view"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_signup_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_signup_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding_view"
            android:drawableStart="@drawable/ic_senha"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bn_signup_conectar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tl_signup_senha"
        android:background="@color/colorAccent"
        android:text="@string/criar_usuario"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_signup_voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="goToLogin"
        android:text="@string/voltar"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>