<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/padding_activity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tl_login_senha">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding_view"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_login_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding_view"
            android:drawableStart="@drawable/ic_senha"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bn_login_conectar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tl_login_senha"
        android:background="@color/colorAccent"
        android:text="@string/conectar"
        android:textColor="@android:color/white" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/lb_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bn_login_cadastrar"
        android:layout_marginBottom="5dp"
        android:onClick="loginFacebook" />

    <Button
        android:id="@+id/bn_login_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:onClick="goToSignUp"
        android:text="@string/criar_conta"
        android:textColor="@android:color/white" />

</RelativeLayout>